# circuit-aware-speculation

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  DETAILED_IMPLEMENTATION.md  LICENSE  PLAN.md  README.md  claude_artifacts.md  detailed_implementation.html  modal_app.py  pyproject.toml  report.md  requirements.txt
configs/: data.yaml  models.yaml
docs/: CLAIMS_LEDGER.md  DECISIONS.md  EXPERIMENT_CONTRACT.md  ISSUE_BACKLOG.md  RESEARCH_SPEC.md  TRACE_SCHEMA.md  autoresearch_outcomes.md  causal_intervention_report.md  generator_critic.md  landscape.md
paper/: .gitignore  Makefile  main.tex
scripts/: check_invariants.py  error_taxonomy.py  eval_length_policies.py  fit_autoresearch.py  fit_baselines.py  fit_probes.py  lhf_analysis.py  make_figures.py  readability.py  run_t3_analysis.py  verify_env.py
src/cas/: __init__.py  capture.py  commit.py  config.py  models.py  signals.py  spec_decode.py  timing.py
src/cas/analysis/: __init__.py  atlas.py  baselines.py  oracle.py
src/cas/annotate/: __init__.py  api.py  categories.py  phases.py
src/cas/autoresearch/: __init__.py  cost.py  eval.py  features.py  generator_critic.js  interventions.py  types.py
tasks/: CODEX.md  GROK.md
tests/: test_analysis.py  test_annotate.py  test_autoresearch_cost.py  test_autoresearch_eval.py  test_autoresearch_features.py  test_autoresearch_frozen.py  test_baselines.py  test_capture.py  test_equivalence_gpu.py  test_frontier_capture.py  test_interventions.py  test_policies.py  test_splits.py  test_survival.py  test_trace_writer.py  test_verify_and_commit.py
(+13 files in other folders)
