[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "circuit-aware-speculation"
version = "0.0.0"
description = "Mechanistic signals for compute-optimal speculative decoding (Phase-1 harness)"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
